// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`karura aggregatedDex' swapWithExactSupply: events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(number)",
        "(number)",
        "(number)",
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "ForeignAsset": "(number)",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`acala aggregatedDex' swapWithExactSupply: events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(number)",
        "(number)",
        "(number)",
      ],
      "path": [
        {
          "Token": "ACA",
        },
        {
          "Token": "AUSD",
        },
        {
          "Token": "LDOT",
        },
      ],
      "trader": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;
